--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 
 # IDEs and editors
 /.idea
-*.iml
 .project
 .classpath
 .c9/
@@ -41,3 +40,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+/todo-app.iml
